# rabbitmq_demo

./: .gitignore  README.md  pyproject.toml
rabbitmq_demo/: emit_log_topic.py  receive_logs_topic.py
rabbitmq_demo/fanout/: emit_log.py
rabbitmq_demo/helloworld/: receive.py  send.py
rabbitmq_demo/route/: emit_log_direct.py  receive_logs_direct.py
rabbitmq_demo/rpc/: rpc_client.py  rpc_server.py
rabbitmq_demo/worker/: new_task.py  worker.py
